--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 }
 .cardfooter{
     padding: 8px;
-    background-color: gray;
+    background-color: rgb(66, 255, 145);
     display: flex;
     justify-content: right;
 }
@@ -34,9 +34,17 @@ input[type=text]{
 .btn1{
     border: none;
     border-radius: 8px;
-    background-color: green;
+    background-color: rgb(182, 12, 12);
     color: white;
     font-size: 16px;
     font-weight: bold;
     padding: 8px 20px;
+}
+.hsl{
+    font-size: 14px;
+    margin: 10px;
+    height: 200px;
+    border: solid #C0C0C0 1px;
+    padding: 10px;
+    background-color: grey;
 }
